[VEUE-706]: Fix grid alignment of video cards

--- a/app/javascript/style/discover.scss
+++ b/app/javascript/style/discover.scss
@@ -56,7 +56,6 @@ body#discover__index {
           grid-template-columns: minmax(0, 1fr);
           column-gap: 50px;
           row-gap: 25px;
-          align-items: center;
         }
       }
 
